[package]
name = "alligator"
version = "0.1.0"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

License = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause OR MIT"

[dependencies]
rand = "0.7"
