[package]
name = "gharial"
version = "0.3.1"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = """
Gharial is a test tool for program to manipulate memory directly.
"""

readme = "README.md"
documentation = "https://wbcchsyn.github.io/rust-gharial/gharial/"
repository = "https://github.com/wbcchsyn/rust-gharial.git"

keywords = ["test", "memory", "allocator"]
categories = ["development-tools::testing", "memory-management"]

license = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause OR MIT"

[dependencies]
rand = "0.7"
